# starship-plugin-poc

./: .gitignore  Cargo.toml  README.md  justfile
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  main.rs  main_old.rs
crates/daemon/src/plugin_runtime/: mod.rs
crates/plugin-directory/: Cargo.toml
crates/plugin-directory/src/: lib.rs
crates/plugin_directory/: Cargo.toml
crates/plugin_directory/src/: lib.rs
crates/plugin_protocol/: Cargo.toml
crates/plugin_protocol/src/: main.rs  types.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: main.rs  types.rs
crates/starship-plugin/: Cargo.toml
crates/starship-plugin-git/: Cargo.toml
crates/starship-plugin-git/src/: main.rs
crates/starship-plugin/src/: lib.rs
daemon/: Cargo.toml
plugin/: Cargo.toml
plugin/src/: lib.rs
plugins/directory/: Cargo.toml
plugins/directory/src/: lib.rs
src/: client.rs  lib.rs  main.rs  process.rs  prompt.rs  server.rs
src/daemon/: main.rs  pid.rs  server.rs  socket.rs
src/modules/: directory.rs
