[package]
name = "starship-plugins-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-std = { version = "1.11.0", features = ["unstable", "attributes", "tokio1"] }
futures = "0.3.21"
tarpc = { version = "0.28.0", features = ["full"] }
tokio = { version = "1.18.2", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["compat", "codec"] }

[[bin]]
name = "client"
