[package]
name = "starship-plugins-poc"
version = "0.1.0"
authors = ["Matan Kushner <hello@matchai.dev>"]
edition = "2021"

[dependencies]
anyhow = "1"
futures = "0.3"
log = "0.4"
once_cell = "1.17.0"
psutil = "3.2.2"
shellexpand = "3.0.0"
tarpc = { version = "0.27", features = ["serde1", "serde-transport", "tcp"] }
tokio = { version = "1", features = ["macros", "process"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tracing = "0.1"
tracing-subscriber = "0.2"

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "prompt"
path = "src/prompt.rs"

[[bin]]
name = "daemon"
path = "src/daemon/main.rs"

# Legacy

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "starship-plugin-directory"
path = "src/modules/directory.rs"
