[package]
name = "starship-plugins-poc"
version = "0.1.0"
authors = ["Matan Kushner <hello@matchai.dev>"]
edition = "2021"

[dependencies]
anyhow = "1"
extism = "0.2.0"
futures = "0.3"
log = "0.4"
once_cell = "1.17.0"
pretty_env_logger = "0.4.0"
psutil = "3.2.2"
shellexpand = "3.0.0"
tarpc = { version = "0.31", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"

[[bin]]
name = "daemon"
path = "src/main.rs"
