[package]
name = "starship_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
fp-bindgen-support = { version = "3.0.0", features = ["wasmer2_host", "async"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
wasmer = { version = "2.3", features = ["compiler", "cranelift", "singlepass"] }
