[package]
name = "starship_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
fp-bindgen-support = { version = "3.0.0", features = ["wasmer2_host", "async"] }
futures = "0.3.28"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.1.0"
tarpc = { version = "0.33.0", features = ["serde-transport", "tcp", "serde-transport-bincode"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
wasmer = { version = "2.3", features = ["compiler", "cranelift", "singlepass"] }

[lib]
name = "starship_service"
path = "src/lib.rs"

[[bin]]
name = "starshipd"
path = "src/main.rs"
